@@ -1,6 +1,12 @@
 package com.linkedin.metadata.service;
 
-import static org.mockito.ArgumentMatchers.any;
+import static com.linkedin.metadata.Constants.DOMAINS_ASPECT_NAME;
+import static com.linkedin.metadata.service.util.ServiceTestUtils.createMockDomainsClient;
+import static org.mockito.ArgumentMatchers.anySet;
+import static org.mockito.ArgumentMatchers.eq;
+import static org.mockito.Mockito.mock;
+import static org.mockito.Mockito.reset;
+import static org.mockito.Mockito.times;
 
 import com.google.common.collect.ImmutableList;
 import com.google.common.collect.ImmutableMap;
@@ -16,16 +22,24 @@ import com.linkedin.entity.EnvelopedAspect;
 import com.linkedin.entity.EnvelopedAspectMap;
 import com.linkedin.entity.client.SystemEntityClient;
 import com.linkedin.metadata.Constants;
+import com.linkedin.metadata.aspect.AspectRetriever;
 import com.linkedin.metadata.resource.ResourceReference;
 import com.linkedin.metadata.utils.GenericRecordUtils;
 import com.linkedin.mxe.MetadataChangeProposal;
+import com.linkedin.r2.RemoteInvocationException;
 import io.datahubproject.metadata.context.OperationContext;
+import io.datahubproject.openapi.client.OpenApiClient;
 import io.datahubproject.test.metadata.context.TestOperationContexts;
+import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
+import java.util.Map;
+import java.util.Set;
 import javax.annotation.Nullable;
+import org.mockito.ArgumentCaptor;
 import org.mockito.Mockito;
 import org.testng.Assert;
+import org.testng.annotations.BeforeClass;
 import org.testng.annotations.Test;
 
 public class DomainServiceTest {
@@ -37,16 +51,242 @@ public class DomainServiceTest {
       UrnUtils.getUrn("urn:li:dataset:(urn:li:dataPlatform:kafka,test,PROD)");
   private static final Urn TEST_ENTITY_URN_2 =
       UrnUtils.getUrn("urn:li:dataset:(urn:li:dataPlatform:kafka,test1,PROD)");
-  private static OperationContext opContext =
-      TestOperationContexts.systemContextNoSearchAuthorization();
+  private static AspectRetriever mockAspectRetriever;
+  private static OperationContext opContext;
+
+  @BeforeClass
+  public void init() {
+    mockAspectRetriever = mock(AspectRetriever.class);
+    opContext = TestOperationContexts.systemContextNoSearchAuthorization(mockAspectRetriever);
+  }
 
   @Test
-  private void testSetDomainExistingDomain() throws Exception {
+  private void testSetDomain() throws Exception {
     Domains existingDomains = new Domains();
     existingDomains.setDomains(new UrnArray(ImmutableList.of(TEST_DOMAIN_URN_1)));
-    SystemEntityClient mockClient = createMockEntityClient(existingDomains);
+    OpenApiClient mockOpenAPIClient = createMockDomainsClient(existingDomains);
 
-    final DomainService service = new DomainService(mockClient);
+    final DomainService service = createDomainsService(mockOpenAPIClient);
+
+    service.setDomain(opContext, TEST_ENTITY_URN_1, TEST_DOMAIN_URN_1);
+
+    ArgumentCaptor<Collection<MetadataChangeProposal>> actualMcp =
+        ArgumentCaptor.forClass(Collection.class);
+
+    Mockito.verify(service.entityClient, times(1))
+        .batchIngestProposals(
+            Mockito.any(OperationContext.class), actualMcp.capture(), Mockito.anyBoolean());
+
+    MetadataChangeProposal event1 = (MetadataChangeProposal) ((List) actualMcp.getValue()).get(0);
+    Assert.assertEquals(event1.getAspectName(), DOMAINS_ASPECT_NAME);
+    Assert.assertEquals(event1.getEntityType(), Constants.DATASET_ENTITY_NAME);
+    RecordTemplate domainsAspect1 =
+        GenericRecordUtils.deserializeAspect(
+            event1.getAspect().getValue(), event1.getAspect().getContentType(), Domains.class);
+    Assert.assertEquals(
+        domainsAspect1,
+        new Domains().setDomains(new UrnArray(ImmutableList.of(TEST_DOMAIN_URN_1))));
+  }
+
+  @Test
+  private void testBatchSetDomain() throws Exception {
+    Domains existingDomains = new Domains();
+    existingDomains.setDomains(new UrnArray(ImmutableList.of(TEST_DOMAIN_URN_1)));
+    OpenApiClient mockOpenAPIClient = createMockDomainsClient(existingDomains);
+
+    final DomainService service = createDomainsService(mockOpenAPIClient);
+
+    service.batchSetDomain(
+        opContext,
+        TEST_DOMAIN_URN_1,
+        ImmutableList.of(
+            new ResourceReference(TEST_ENTITY_URN_1, null, null),
+            new ResourceReference(TEST_ENTITY_URN_2, null, null)),
+        null);
+
+    ArgumentCaptor<Collection<MetadataChangeProposal>> actualMcp =
+        ArgumentCaptor.forClass(Collection.class);
+
+    Mockito.verify(service.entityClient, times(1))
+        .batchIngestProposals(
+            Mockito.any(OperationContext.class), actualMcp.capture(), Mockito.anyBoolean());
+
+    MetadataChangeProposal event1 = (MetadataChangeProposal) ((List) actualMcp.getValue()).get(0);
+    Assert.assertEquals(event1.getAspectName(), DOMAINS_ASPECT_NAME);
+    Assert.assertEquals(event1.getEntityType(), Constants.DATASET_ENTITY_NAME);
+    Assert.assertEquals(event1.getEntityUrn(), TEST_ENTITY_URN_1);
+    RecordTemplate domainsAspect1 =
+        GenericRecordUtils.deserializeAspect(
+            event1.getAspect().getValue(), event1.getAspect().getContentType(), Domains.class);
+    Assert.assertEquals(
+        domainsAspect1,
+        new Domains().setDomains(new UrnArray(ImmutableList.of(TEST_DOMAIN_URN_1))));
+
+    MetadataChangeProposal event2 = (MetadataChangeProposal) ((List) actualMcp.getValue()).get(1);
+    Assert.assertEquals(event2.getAspectName(), DOMAINS_ASPECT_NAME);
+    Assert.assertEquals(event2.getEntityType(), Constants.DATASET_ENTITY_NAME);
+    Assert.assertEquals(event2.getEntityUrn(), TEST_ENTITY_URN_2);
+    RecordTemplate domainsAspect2 =
+        GenericRecordUtils.deserializeAspect(
+            event2.getAspect().getValue(), event1.getAspect().getContentType(), Domains.class);
+    Assert.assertEquals(
+        domainsAspect2,
+        new Domains().setDomains(new UrnArray(ImmutableList.of(TEST_DOMAIN_URN_1))));
+  }
+
+  @Test
+  private void testUnsetDomain() throws Exception {
+    Domains existingDomains = new Domains();
+    existingDomains.setDomains(new UrnArray(ImmutableList.of(TEST_DOMAIN_URN_1)));
+    OpenApiClient mockOpenAPIClient = createMockDomainsClient(existingDomains);
+
+    final DomainService service = createDomainsService(mockOpenAPIClient);
+
+    service.unsetDomain(opContext, TEST_ENTITY_URN_1);
+
+    ArgumentCaptor<Collection<MetadataChangeProposal>> actualMcp =
+        ArgumentCaptor.forClass(Collection.class);
+
+    Mockito.verify(service.entityClient, times(1))
+        .batchIngestProposals(
+            Mockito.any(OperationContext.class), actualMcp.capture(), Mockito.anyBoolean());
+
+    MetadataChangeProposal event1 = (MetadataChangeProposal) ((List) actualMcp.getValue()).get(0);
+    Assert.assertEquals(event1.getAspectName(), DOMAINS_ASPECT_NAME);
+    Assert.assertEquals(event1.getEntityType(), Constants.DATASET_ENTITY_NAME);
+    RecordTemplate domainsAspect1 =
+        GenericRecordUtils.deserializeAspect(
+            event1.getAspect().getValue(), event1.getAspect().getContentType(), Domains.class);
+    Assert.assertEquals(
+        domainsAspect1, new Domains().setDomains(new UrnArray(Collections.emptyList())));
+  }
+
+  @Test
+  private void testBatchUnsetDomain() throws Exception {
+    Domains existingDomains = new Domains();
+    existingDomains.setDomains(new UrnArray(ImmutableList.of(TEST_DOMAIN_URN_1)));
+    OpenApiClient mockOpenAPIClient = createMockDomainsClient(existingDomains);
+
+    final DomainService service = createDomainsService(mockOpenAPIClient);
+
+    service.batchUnsetDomain(
+        opContext,
+        ImmutableList.of(
+            new ResourceReference(TEST_ENTITY_URN_1, null, null),
+            new ResourceReference(TEST_ENTITY_URN_2, null, null)),
+        null);
+
+    ArgumentCaptor<Collection<MetadataChangeProposal>> actualMcp =
+        ArgumentCaptor.forClass(Collection.class);
+
+    Mockito.verify(service.entityClient, times(1))
+        .batchIngestProposals(
+            Mockito.any(OperationContext.class), actualMcp.capture(), Mockito.anyBoolean());
+
+    MetadataChangeProposal event1 = (MetadataChangeProposal) ((List) actualMcp.getValue()).get(0);
+    Assert.assertEquals(event1.getAspectName(), DOMAINS_ASPECT_NAME);
+    Assert.assertEquals(event1.getEntityType(), Constants.DATASET_ENTITY_NAME);
+    Assert.assertEquals(event1.getEntityUrn(), TEST_ENTITY_URN_1);
+    RecordTemplate domainsAspect1 =
+        GenericRecordUtils.deserializeAspect(
+            event1.getAspect().getValue(), event1.getAspect().getContentType(), Domains.class);
+    Assert.assertEquals(
+        domainsAspect1, new Domains().setDomains(new UrnArray(Collections.emptyList())));
+
+    MetadataChangeProposal event2 = (MetadataChangeProposal) ((List) actualMcp.getValue()).get(1);
+    Assert.assertEquals(event2.getAspectName(), DOMAINS_ASPECT_NAME);
+    Assert.assertEquals(event2.getEntityType(), Constants.DATASET_ENTITY_NAME);
+    Assert.assertEquals(event2.getEntityUrn(), TEST_ENTITY_URN_2);
+    RecordTemplate domainsAspect2 =
+        GenericRecordUtils.deserializeAspect(
+            event1.getAspect().getValue(), event2.getAspect().getContentType(), Domains.class);
+    Assert.assertEquals(
+        domainsAspect2, new Domains().setDomains(new UrnArray(Collections.emptyList())));
+  }
+
+  @Test
+  private void testGetEntityDomains() throws Exception {
+
+    final Domains existingDomains = new Domains();
+    existingDomains.setDomains(
+        new UrnArray(ImmutableList.of(TEST_DOMAIN_URN_1, TEST_DOMAIN_URN_2)));
+
+    final OpenApiClient mockOpenAPIClient = createMockDomainsClient(existingDomains);
+
+    final DomainService service = createDomainsService(mockOpenAPIClient);
+
+    final EntityResponse entityResponse = new EntityResponse();
+
+    entityResponse.setAspects(
+        new EnvelopedAspectMap(
+            ImmutableMap.of(
+                DOMAINS_ASPECT_NAME,
+                new EnvelopedAspect().setValue(new Aspect(existingDomains.data())))));
+
+    Mockito.when(
+            service.entityClient.getV2(
+                Mockito.any(OperationContext.class),
+                Mockito.eq(TEST_ENTITY_URN_1.getEntityType()),
+                Mockito.eq(TEST_ENTITY_URN_1),
+                Mockito.eq(ImmutableSet.of(DOMAINS_ASPECT_NAME))))
+        .thenReturn(entityResponse);
+
+    final List<Urn> domains = service.getEntityDomains(opContext, TEST_ENTITY_URN_1);
+    Assert.assertEquals(domains.get(0), TEST_DOMAIN_URN_1);
+    Assert.assertEquals(domains.get(1), TEST_DOMAIN_URN_2);
+  }
+
+  @Test
+  private void testGetEntityDomainsNullDomains() throws Exception {
+    final OpenApiClient mockOpenAPIClient = createMockDomainsClient(null);
+    final DomainService service = createDomainsService(mockOpenAPIClient);
+    final EntityResponse entityResponse = new EntityResponse();
+
+    entityResponse.setAspects(new EnvelopedAspectMap(Collections.emptyMap()));
+
+    Mockito.when(
+            service.entityClient.getV2(
+                Mockito.any(OperationContext.class),
+                Mockito.eq(TEST_ENTITY_URN_1.getEntityType()),
+                Mockito.eq(TEST_ENTITY_URN_1),
+                Mockito.eq(ImmutableSet.of(DOMAINS_ASPECT_NAME))))
+        .thenReturn(entityResponse);
+
+    final List<Urn> domains = service.getEntityDomains(opContext, TEST_ENTITY_URN_1);
+    Assert.assertEquals(domains.size(), 0);
+  }
+
+  @Test(
+      expectedExceptions = RuntimeException.class,
+      expectedExceptionsMessageRegExp = "Failed to retrieve domains for entity with urn.*")
+  private void testGetEntityDomainsRemoteInvocationException() throws Exception {
+    final OpenApiClient mockOpenAPIClient = createMockDomainsClient(null);
+    final DomainService service = createDomainsService(mockOpenAPIClient);
+    final EntityResponse entityResponse = new EntityResponse();
+
+    entityResponse.setAspects(new EnvelopedAspectMap(Collections.emptyMap()));
+
+    Mockito.when(
+            service.entityClient.getV2(
+                Mockito.any(OperationContext.class),
+                Mockito.eq(TEST_ENTITY_URN_1.getEntityType()),
+                Mockito.eq(TEST_ENTITY_URN_1),
+                Mockito.eq(ImmutableSet.of(DOMAINS_ASPECT_NAME))))
+        .thenThrow(new RemoteInvocationException("Failed to connect to downstream service"));
+
+    service.getEntityDomains(opContext, TEST_ENTITY_URN_1);
+
+    // Throws expected exception - Decide whether the caller should handle this explicitly.
+  }
+
+  @Test
+  private void testBuildSetDomainProposalsExistingDomain() throws Exception {
+    Domains existingDomains = new Domains();
+    existingDomains.setDomains(new UrnArray(ImmutableList.of(TEST_DOMAIN_URN_1)));
+    setMockAspectRetriever(existingDomains);
+    OpenApiClient mockOpenAPIClient = createMockDomainsClient(existingDomains);
+
+    final DomainService service = createDomainsService(mockOpenAPIClient);
 
     Urn newDomainUrn = UrnUtils.getUrn("urn:li:domain:newDomain");
     List<MetadataChangeProposal> events =
@@ -54,10 +294,11 @@ public class DomainServiceTest {
             newDomainUrn,
             ImmutableList.of(
                 new ResourceReference(TEST_ENTITY_URN_1, null, null),
-                new ResourceReference(TEST_ENTITY_URN_2, null, null)));
+                new ResourceReference(TEST_ENTITY_URN_2, null, null)),
+            null);
 
     MetadataChangeProposal event1 = events.get(0);
-    Assert.assertEquals(event1.getAspectName(), Constants.DOMAINS_ASPECT_NAME);
+    Assert.assertEquals(event1.getAspectName(), DOMAINS_ASPECT_NAME);
     Assert.assertEquals(event1.getEntityType(), Constants.DATASET_ENTITY_NAME);
     RecordTemplate domainsAspect1 =
         GenericRecordUtils.deserializeAspect(
@@ -65,8 +306,8 @@ public class DomainServiceTest {
     Assert.assertEquals(
         domainsAspect1, new Domains().setDomains(new UrnArray(ImmutableList.of(newDomainUrn))));
 
-    MetadataChangeProposal event2 = events.get(0);
-    Assert.assertEquals(event2.getAspectName(), Constants.DOMAINS_ASPECT_NAME);
+    MetadataChangeProposal event2 = events.get(1);
+    Assert.assertEquals(event2.getAspectName(), DOMAINS_ASPECT_NAME);
     Assert.assertEquals(event2.getEntityType(), Constants.DATASET_ENTITY_NAME);
     RecordTemplate domainsAspect2 =
         GenericRecordUtils.deserializeAspect(
@@ -75,11 +316,17 @@ public class DomainServiceTest {
         domainsAspect2, new Domains().setDomains(new UrnArray(ImmutableList.of(newDomainUrn))));
   }
 
+  private DomainService createDomainsService(OpenApiClient mockOpenAPIClient) {
+    return new DomainService(
+        mock(SystemEntityClient.class), mockOpenAPIClient, opContext.getObjectMapper());
+  }
+
   @Test
   private void testSetDomainNoExistingDomain() throws Exception {
-    SystemEntityClient mockClient = createMockEntityClient(null);
+    setMockAspectRetriever(null);
+    OpenApiClient mockOpenAPIClient = createMockDomainsClient(null);
 
-    final DomainService service = new DomainService(mockClient);
+    final DomainService service = createDomainsService(mockOpenAPIClient);
 
     Urn newDomainUrn = UrnUtils.getUrn("urn:li:domain:newDomain");
     List<MetadataChangeProposal> events =
@@ -87,10 +334,11 @@ public class DomainServiceTest {
             newDomainUrn,
             ImmutableList.of(
                 new ResourceReference(TEST_ENTITY_URN_1, null, null),
-                new ResourceReference(TEST_ENTITY_URN_2, null, null)));
+                new ResourceReference(TEST_ENTITY_URN_2, null, null)),
+            null);
 
     MetadataChangeProposal event1 = events.get(0);
-    Assert.assertEquals(event1.getAspectName(), Constants.DOMAINS_ASPECT_NAME);
+    Assert.assertEquals(event1.getAspectName(), DOMAINS_ASPECT_NAME);
     Assert.assertEquals(event1.getEntityType(), Constants.DATASET_ENTITY_NAME);
     RecordTemplate domainsAspect1 =
         GenericRecordUtils.deserializeAspect(
@@ -98,8 +346,8 @@ public class DomainServiceTest {
     Assert.assertEquals(
         domainsAspect1, new Domains().setDomains(new UrnArray(ImmutableList.of(newDomainUrn))));
 
-    MetadataChangeProposal event2 = events.get(0);
-    Assert.assertEquals(event2.getAspectName(), Constants.DOMAINS_ASPECT_NAME);
+    MetadataChangeProposal event2 = events.get(1);
+    Assert.assertEquals(event2.getAspectName(), DOMAINS_ASPECT_NAME);
     Assert.assertEquals(event2.getEntityType(), Constants.DATASET_ENTITY_NAME);
     RecordTemplate domainsAspect2 =
         GenericRecordUtils.deserializeAspect(
@@ -112,9 +360,10 @@ public class DomainServiceTest {
   private void testUnsetDomainExistingDomain() throws Exception {
     Domains existingDomains = new Domains();
     existingDomains.setDomains(new UrnArray(ImmutableList.of(TEST_DOMAIN_URN_1)));
-    SystemEntityClient mockClient = createMockEntityClient(existingDomains);
+    setMockAspectRetriever(existingDomains);
+    OpenApiClient mockOpenAPIClient = createMockDomainsClient(existingDomains);
 
-    final DomainService service = new DomainService(mockClient);
+    final DomainService service = createDomainsService(mockOpenAPIClient);
 
     List<MetadataChangeProposal> events =
         service.buildUnsetDomainProposals(
@@ -123,7 +372,7 @@ public class DomainServiceTest {
                 new ResourceReference(TEST_ENTITY_URN_2, null, null)));
 
     MetadataChangeProposal event1 = events.get(0);
-    Assert.assertEquals(event1.getAspectName(), Constants.DOMAINS_ASPECT_NAME);
+    Assert.assertEquals(event1.getAspectName(), DOMAINS_ASPECT_NAME);
     Assert.assertEquals(event1.getEntityType(), Constants.DATASET_ENTITY_NAME);
     RecordTemplate domainsAspect1 =
         GenericRecordUtils.deserializeAspect(
@@ -131,8 +380,8 @@ public class DomainServiceTest {
     Assert.assertEquals(
         domainsAspect1, new Domains().setDomains(new UrnArray(Collections.emptyList())));
 
-    MetadataChangeProposal event2 = events.get(0);
-    Assert.assertEquals(event2.getAspectName(), Constants.DOMAINS_ASPECT_NAME);
+    MetadataChangeProposal event2 = events.get(1);
+    Assert.assertEquals(event2.getAspectName(), DOMAINS_ASPECT_NAME);
     Assert.assertEquals(event2.getEntityType(), Constants.DATASET_ENTITY_NAME);
     RecordTemplate domainsAspect2 =
         GenericRecordUtils.deserializeAspect(
@@ -143,9 +392,10 @@ public class DomainServiceTest {
 
   @Test
   private void testUnsetDomainNoExistingDomain() throws Exception {
-    SystemEntityClient mockClient = createMockEntityClient(null);
+    setMockAspectRetriever(null);
+    OpenApiClient mockOpenAPIClient = createMockDomainsClient(null);
 
-    final DomainService service = new DomainService(mockClient);
+    final DomainService service = createDomainsService(mockOpenAPIClient);
 
     List<MetadataChangeProposal> events =
         service.buildUnsetDomainProposals(
@@ -154,7 +404,7 @@ public class DomainServiceTest {
                 new ResourceReference(TEST_ENTITY_URN_2, null, null)));
 
     MetadataChangeProposal event1 = events.get(0);
-    Assert.assertEquals(event1.getAspectName(), Constants.DOMAINS_ASPECT_NAME);
+    Assert.assertEquals(event1.getAspectName(), DOMAINS_ASPECT_NAME);
     Assert.assertEquals(event1.getEntityType(), Constants.DATASET_ENTITY_NAME);
     RecordTemplate domainsAspect1 =
         GenericRecordUtils.deserializeAspect(
@@ -162,8 +412,8 @@ public class DomainServiceTest {
     Assert.assertEquals(
         domainsAspect1, new Domains().setDomains(new UrnArray(Collections.emptyList())));
 
-    MetadataChangeProposal event2 = events.get(0);
-    Assert.assertEquals(event2.getAspectName(), Constants.DOMAINS_ASPECT_NAME);
+    MetadataChangeProposal event2 = events.get(1);
+    Assert.assertEquals(event2.getAspectName(), DOMAINS_ASPECT_NAME);
     Assert.assertEquals(event2.getEntityType(), Constants.DATASET_ENTITY_NAME);
     RecordTemplate domainsAspect2 =
         GenericRecordUtils.deserializeAspect(
@@ -176,9 +426,10 @@ public class DomainServiceTest {
   private void testAddDomainsExistingDomain() throws Exception {
     Domains existingDomains = new Domains();
     existingDomains.setDomains(new UrnArray(ImmutableList.of(TEST_DOMAIN_URN_1)));
-    SystemEntityClient mockClient = createMockEntityClient(existingDomains);
+    setMockAspectRetriever(existingDomains);
+    OpenApiClient mockOpenAPIClient = createMockDomainsClient(existingDomains);
 
-    final DomainService service = new DomainService(mockClient);
+    final DomainService service = createDomainsService(mockOpenAPIClient);
 
     List<MetadataChangeProposal> events =
         service.buildAddDomainsProposals(
@@ -189,7 +440,7 @@ public class DomainServiceTest {
                 new ResourceReference(TEST_ENTITY_URN_2, null, null)));
 
     MetadataChangeProposal event1 = events.get(0);
-    Assert.assertEquals(event1.getAspectName(), Constants.DOMAINS_ASPECT_NAME);
+    Assert.assertEquals(event1.getAspectName(), DOMAINS_ASPECT_NAME);
     Assert.assertEquals(event1.getEntityType(), Constants.DATASET_ENTITY_NAME);
     RecordTemplate domainsAspect1 =
         GenericRecordUtils.deserializeAspect(
@@ -199,8 +450,8 @@ public class DomainServiceTest {
         new Domains()
             .setDomains(new UrnArray(ImmutableList.of(TEST_DOMAIN_URN_1, TEST_DOMAIN_URN_2))));
 
-    MetadataChangeProposal event2 = events.get(0);
-    Assert.assertEquals(event2.getAspectName(), Constants.DOMAINS_ASPECT_NAME);
+    MetadataChangeProposal event2 = events.get(1);
+    Assert.assertEquals(event2.getAspectName(), DOMAINS_ASPECT_NAME);
     Assert.assertEquals(event2.getEntityType(), Constants.DATASET_ENTITY_NAME);
     RecordTemplate domainsAspect2 =
         GenericRecordUtils.deserializeAspect(
@@ -213,9 +464,10 @@ public class DomainServiceTest {
 
   @Test
   private void testAddDomainsNoExistingDomain() throws Exception {
-    SystemEntityClient mockClient = createMockEntityClient(null);
+    setMockAspectRetriever(null);
+    OpenApiClient mockOpenAPIClient = createMockDomainsClient(null);
 
-    final DomainService service = new DomainService(mockClient);
+    final DomainService service = createDomainsService(mockOpenAPIClient);
 
     List<MetadataChangeProposal> events =
         service.buildAddDomainsProposals(
@@ -226,7 +478,7 @@ public class DomainServiceTest {
                 new ResourceReference(TEST_ENTITY_URN_2, null, null)));
 
     MetadataChangeProposal event1 = events.get(0);
-    Assert.assertEquals(event1.getAspectName(), Constants.DOMAINS_ASPECT_NAME);
+    Assert.assertEquals(event1.getAspectName(), DOMAINS_ASPECT_NAME);
     Assert.assertEquals(event1.getEntityType(), Constants.DATASET_ENTITY_NAME);
     RecordTemplate domainsAspect1 =
         GenericRecordUtils.deserializeAspect(
@@ -235,8 +487,8 @@ public class DomainServiceTest {
         domainsAspect1,
         new Domains().setDomains(new UrnArray(ImmutableList.of(TEST_DOMAIN_URN_1))));
 
-    MetadataChangeProposal event2 = events.get(0);
-    Assert.assertEquals(event2.getAspectName(), Constants.DOMAINS_ASPECT_NAME);
+    MetadataChangeProposal event2 = events.get(1);
+    Assert.assertEquals(event2.getAspectName(), DOMAINS_ASPECT_NAME);
     Assert.assertEquals(event2.getEntityType(), Constants.DATASET_ENTITY_NAME);
     RecordTemplate domainsAspect2 =
         GenericRecordUtils.deserializeAspect(
@@ -251,9 +503,10 @@ public class DomainServiceTest {
     Domains existingDomains = new Domains();
     existingDomains.setDomains(
         new UrnArray(ImmutableList.of(TEST_DOMAIN_URN_1, TEST_DOMAIN_URN_2)));
-    SystemEntityClient mockClient = createMockEntityClient(existingDomains);
+    setMockAspectRetriever(existingDomains);
+    OpenApiClient mockOpenAPIClient = createMockDomainsClient(existingDomains);
 
-    final DomainService service = new DomainService(mockClient);
+    final DomainService service = createDomainsService(mockOpenAPIClient);
 
     List<MetadataChangeProposal> events =
         service.buildRemoveDomainsProposals(
@@ -264,7 +517,7 @@ public class DomainServiceTest {
                 new ResourceReference(TEST_ENTITY_URN_2, null, null)));
 
     MetadataChangeProposal event1 = events.get(0);
-    Assert.assertEquals(event1.getAspectName(), Constants.DOMAINS_ASPECT_NAME);
+    Assert.assertEquals(event1.getAspectName(), DOMAINS_ASPECT_NAME);
     Assert.assertEquals(event1.getEntityType(), Constants.DATASET_ENTITY_NAME);
     RecordTemplate domainsAspect1 =
         GenericRecordUtils.deserializeAspect(
@@ -273,8 +526,8 @@ public class DomainServiceTest {
         domainsAspect1,
         new Domains().setDomains(new UrnArray(ImmutableList.of(TEST_DOMAIN_URN_1))));
 
-    MetadataChangeProposal event2 = events.get(0);
-    Assert.assertEquals(event2.getAspectName(), Constants.DOMAINS_ASPECT_NAME);
+    MetadataChangeProposal event2 = events.get(1);
+    Assert.assertEquals(event2.getAspectName(), DOMAINS_ASPECT_NAME);
     Assert.assertEquals(event2.getEntityType(), Constants.DATASET_ENTITY_NAME);
     RecordTemplate domainsAspect2 =
         GenericRecordUtils.deserializeAspect(
@@ -286,9 +539,10 @@ public class DomainServiceTest {
 
   @Test
   private void testRemoveDomainsNoExistingDomain() throws Exception {
-    SystemEntityClient mockClient = createMockEntityClient(null);
+    setMockAspectRetriever(null);
+    OpenApiClient mockOpenAPIClient = createMockDomainsClient(null);
 
-    final DomainService service = new DomainService(mockClient);
+    final DomainService service = createDomainsService(mockOpenAPIClient);
 
     List<MetadataChangeProposal> events =
         service.buildRemoveDomainsProposals(
@@ -299,7 +553,7 @@ public class DomainServiceTest {
                 new ResourceReference(TEST_ENTITY_URN_2, null, null)));
 
     MetadataChangeProposal event1 = events.get(0);
-    Assert.assertEquals(event1.getAspectName(), Constants.DOMAINS_ASPECT_NAME);
+    Assert.assertEquals(event1.getAspectName(), DOMAINS_ASPECT_NAME);
     Assert.assertEquals(event1.getEntityType(), Constants.DATASET_ENTITY_NAME);
     RecordTemplate domainsAspect1 =
         GenericRecordUtils.deserializeAspect(
@@ -307,8 +561,8 @@ public class DomainServiceTest {
     Assert.assertEquals(
         domainsAspect1, new Domains().setDomains(new UrnArray(Collections.emptyList())));
 
-    MetadataChangeProposal event2 = events.get(0);
-    Assert.assertEquals(event2.getAspectName(), Constants.DOMAINS_ASPECT_NAME);
+    MetadataChangeProposal event2 = events.get(1);
+    Assert.assertEquals(event2.getAspectName(), DOMAINS_ASPECT_NAME);
     Assert.assertEquals(event2.getEntityType(), Constants.DATASET_ENTITY_NAME);
     RecordTemplate domainsAspect2 =
         GenericRecordUtils.deserializeAspect(
@@ -317,39 +571,23 @@ public class DomainServiceTest {
         domainsAspect2, new Domains().setDomains(new UrnArray(Collections.emptyList())));
   }
 
-  private static SystemEntityClient createMockEntityClient(@Nullable Domains existingDomains)
-      throws Exception {
-    SystemEntityClient mockClient = Mockito.mock(SystemEntityClient.class);
-    Mockito.when(
-            mockClient.batchGetV2(
-                any(OperationContext.class),
-                Mockito.eq(Constants.DATASET_ENTITY_NAME),
-                Mockito.eq(ImmutableSet.of(TEST_ENTITY_URN_1, TEST_ENTITY_URN_2)),
-                Mockito.eq(ImmutableSet.of(Constants.DOMAINS_ASPECT_NAME))))
-        .thenReturn(
-            existingDomains != null
-                ? ImmutableMap.of(
-                    TEST_ENTITY_URN_1,
-                    new EntityResponse()
-                        .setUrn(TEST_ENTITY_URN_1)
-                        .setEntityName(Constants.DATASET_ENTITY_NAME)
-                        .setAspects(
-                            new EnvelopedAspectMap(
-                                ImmutableMap.of(
-                                    Constants.DOMAINS_ASPECT_NAME,
-                                    new EnvelopedAspect()
-                                        .setValue(new Aspect(existingDomains.data()))))),
-                    TEST_ENTITY_URN_2,
-                    new EntityResponse()
-                        .setUrn(TEST_ENTITY_URN_2)
-                        .setEntityName(Constants.DATASET_ENTITY_NAME)
-                        .setAspects(
-                            new EnvelopedAspectMap(
-                                ImmutableMap.of(
-                                    Constants.DOMAINS_ASPECT_NAME,
-                                    new EnvelopedAspect()
-                                        .setValue(new Aspect(existingDomains.data()))))))
-                : Collections.emptyMap());
-    return mockClient;
+  private static void setMockAspectRetriever(@Nullable Domains existingDomains) {
+    reset(mockAspectRetriever);
+
+    if (existingDomains != null) {
+      Mockito.when(
+              mockAspectRetriever.getLatestAspectObjects(
+                  eq(Set.of(TEST_ENTITY_URN_1, TEST_ENTITY_URN_2)),
+                  eq(Set.of(DOMAINS_ASPECT_NAME))))
+          .thenReturn(
+              ImmutableMap.of(
+                  TEST_ENTITY_URN_1,
+                  Map.of(DOMAINS_ASPECT_NAME, new Aspect(existingDomains.data())),
+                  TEST_ENTITY_URN_2,
+                  Map.of(DOMAINS_ASPECT_NAME, new Aspect(existingDomains.data()))));
+    } else {
+      Mockito.when(mockAspectRetriever.getLatestAspectObjects(anySet(), anySet()))
+          .thenReturn(Collections.emptyMap());
+    }
   }
 }
